--- a/python/katas/_modules/codewars/alien_accent.html
+++ b/python/katas/_modules/codewars/alien_accent.html
@@ -257,8 +257,8 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.alien_accent.convert">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">convert</span><span class="p">(</span><span class="n">string</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function converts all a&#39;s and o&#39;s (lowercase and uppercase) in :attr:`string` to o&#39;s and</span>
-<span class="sd">    u&#39;s, respectively.</span>
+<span class="sd">    This function converts all a&#39;s and o&#39;s (lowercase and uppercase) in</span>
+<span class="sd">    :attr:`string` to o&#39;s and u&#39;s, respectively.</span>
 
 <span class="sd">    :param string: The input string</span>
 <span class="sd">    :return: A string with the aforementioned characters replaced</span>
