--- a/python/katas/_modules/codewars/all_star_code_challenge_number_15.html
+++ b/python/katas/_modules/codewars/all_star_code_challenge_number_15.html
@@ -259,9 +259,9 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.all_star_code_challenge_number_15.rotate">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">rotate</span><span class="p">(</span><span class="n">str_</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">list</span><span class="p">[</span><span class="nb">str</span><span class="p">]:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function generates a list of strings that are generated after rotating the given string one</span>
-<span class="sd">    character to the left one time for a total of N times, where N is the length of the given</span>
-<span class="sd">    string.</span>
+<span class="sd">    This function generates a list of strings that are generated after rotating</span>
+<span class="sd">    the given string one character to the left one time for a total of N times,</span>
+<span class="sd">    where N is the length of the given string.</span>
 
 <span class="sd">    :param str_: The input string to rotate</span>
 <span class="sd">    :return: A list of all possible strings after rotating :attr:`str_` N times</span>
