--- a/python/katas/_modules/codewars/all_star_code_challenge_number_24.html
+++ b/python/katas/_modules/codewars/all_star_code_challenge_number_24.html
@@ -257,8 +257,8 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.all_star_code_challenge_number_24.hypotenuse">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">hypotenuse</span><span class="p">(</span><span class="n">side_a</span><span class="p">,</span> <span class="n">side_b</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function finds the hypotenuse of a triangle given two sides. It is assumed that the sides</span>
-<span class="sd">    form a valid triangle.</span>
+<span class="sd">    This function finds the hypotenuse of a triangle given two sides. It is</span>
+<span class="sd">    assumed that the sides form a valid triangle.</span>
 
 <span class="sd">    :param side_a: The first side of a triangle</span>
 <span class="sd">    :param side_b: The second side of a triangle</span>
@@ -272,8 +272,9 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.all_star_code_challenge_number_24.leg">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">leg</span><span class="p">(</span><span class="n">side_c</span><span class="p">,</span> <span class="n">side_a</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function finds one of the sides of a triangle given a side and a hypotenuse. It is assumed</span>
-<span class="sd">    that the hypotenuse and the side form a valid triangle.</span>
+<span class="sd">    This function finds one of the sides of a triangle given a side and a</span>
+<span class="sd">    hypotenuse. It is assumed that the hypotenuse and the side form a valid</span>
+<span class="sd">    triangle.</span>
 
 <span class="sd">    :param side_c: The side of a triangle</span>
 <span class="sd">    :param side_a: The hypotenuse of a triangle</span>
