--- a/python/katas/_modules/codewars/all_star_code_challenge_number_29.html
+++ b/python/katas/_modules/codewars/all_star_code_challenge_number_29.html
@@ -257,8 +257,9 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.all_star_code_challenge_number_29.reverse_sentence">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">reverse_sentence</span><span class="p">(</span><span class="n">sentence</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function reverses all the words of a sentence. All space characters are kept in their</span>
-<span class="sd">    place. For example, given &quot;The   quick brown   fox&quot;, this function will return</span>
+<span class="sd">    This function reverses all the words of a sentence. All space characters</span>
+<span class="sd">    are kept in their place. For example,</span>
+<span class="sd">    reverse_sentence(&quot;The   quick brown   fox&quot;) will return</span>
 <span class="sd">    &quot;ehT   kciuq nworb   xof&quot;.</span>
 
 <span class="sd">    :param sentence: The input string that represents a sentence</span>
