--- a/python/katas/_modules/codewars/area_of_a_square.html
+++ b/python/katas/_modules/codewars/area_of_a_square.html
@@ -259,10 +259,12 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.area_of_a_square.square_area">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">square_area</span><span class="p">(</span><span class="n">arc_length</span><span class="p">:</span> <span class="nb">int</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function calculates the area of a square given the length of an arc that stretches from one</span>
-<span class="sd">    corner of the square to the opposite corner. The formula for calculating the radius of a circle</span>
-<span class="sd">    is as follows: radius = arc length / angle (in radians). The radius of the circle is equal to</span>
-<span class="sd">    the length of each side of the square. Note that ninety degrees is equal to pi / 2 radians.</span>
+<span class="sd">    This function calculates the area of a square given the length of an arc</span>
+<span class="sd">    that stretches from one corner of the square to the opposite corner. The</span>
+<span class="sd">    formula for calculating the radius of a circle is as follows:</span>
+<span class="sd">    radius = arc length / angle (in radians). The radius of the circle is equal</span>
+<span class="sd">    to the length of each side of the square. Note that ninety degrees is equal</span>
+<span class="sd">    to pi / 2 radians.</span>
 
 <span class="sd">    :param arc_length: The arc length of a part of a circle</span>
 <span class="sd">    :return: The area of the square</span>
