--- a/python/katas/_modules/codewars/array_element_parity.html
+++ b/python/katas/_modules/codewars/array_element_parity.html
@@ -259,13 +259,13 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.array_element_parity.solve">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">solve</span><span class="p">(</span><span class="n">arr</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">int</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="nb">int</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns the integer from the given list that is either only positive or only</span>
-<span class="sd">    negative, i.e. the integer does not appear in the list as a negative number and again as a</span>
-<span class="sd">    positive number.</span>
+<span class="sd">    This function returns the integer from the given list that is either only</span>
+<span class="sd">    positive or only negative, i.e., the integer does not appear in the list as</span>
+<span class="sd">    a negative number and again as a positive number.</span>
 
 <span class="sd">    :param arr: The input list of integers</span>
-<span class="sd">    :return: The integer that does not appear in the list twice, once as a negative and again as a</span>
-<span class="sd">        positive</span>
+<span class="sd">    :return: The integer that does not appear in the list twice, once as a</span>
+<span class="sd">        negative and again as a positive</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">unique</span> <span class="o">=</span> <span class="nb">set</span><span class="p">(</span><span class="n">arr</span><span class="p">)</span>
     <span class="k">if</span> <span class="nb">len</span><span class="p">(</span><span class="n">unique</span><span class="p">)</span> <span class="o">==</span> <span class="nb">len</span><span class="p">(</span><span class="n">arr</span><span class="p">):</span>
