--- a/python/katas/_modules/codewars/array_filter.html
+++ b/python/katas/_modules/codewars/array_filter.html
@@ -257,7 +257,8 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.array_filter.get_even_numbers">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">get_even_numbers</span><span class="p">(</span><span class="n">arr</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">int</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="nb">list</span><span class="p">[</span><span class="nb">int</span><span class="p">]:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    Given a list of integers, this function returns a list of all integers that are even.</span>
+<span class="sd">    Given a list of integers, this function returns a list of all integers that</span>
+<span class="sd">    are even.</span>
 
 <span class="sd">    :param arr: The input list of integers</span>
 <span class="sd">    :return: A list of all even integers</span>
