--- a/python/katas/_modules/codewars/array_plus_array.html
+++ b/python/katas/_modules/codewars/array_plus_array.html
@@ -257,8 +257,8 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.array_plus_array.array_plus_array">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">array_plus_array</span><span class="p">(</span><span class="n">arr1</span><span class="p">:</span> <span class="nb">list</span><span class="p">,</span> <span class="n">arr2</span><span class="p">:</span> <span class="nb">list</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function sums all the elements in :attr:`arr1`, sums all the elements in :attr:`arr2`, and</span>
-<span class="sd">    then sums the two results together.</span>
+<span class="sd">    This function sums all the elements in :attr:`arr1`, sums all the elements</span>
+<span class="sd">    in :attr:`arr2`, and then sums the two results together.</span>
 
 <span class="sd">    :param arr1: The first input list</span>
 <span class="sd">    :param arr2: The second input list</span>
