--- a/python/katas/_modules/codewars/ascii_shift_encryption_slash_decryption.html
+++ b/python/katas/_modules/codewars/ascii_shift_encryption_slash_decryption.html
@@ -257,8 +257,9 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.ascii_shift_encryption_slash_decryption.ascii_encrypt">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">ascii_encrypt</span><span class="p">(</span><span class="n">plaintext</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function encrypts the given plaintext message using the index of each character in the</span>
-<span class="sd">    string as the number of characters to shift right in the set of Unicode code points.</span>
+<span class="sd">    This function encrypts the given plaintext message using the index of each</span>
+<span class="sd">    character in the string as the number of characters to shift right in the</span>
+<span class="sd">    set of Unicode code points.</span>
 
 <span class="sd">    :param plaintext: The plaintext message to encrypt</span>
 <span class="sd">    :return: An encrypted message, the ciphertext</span>
@@ -271,8 +272,9 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.ascii_shift_encryption_slash_decryption.ascii_decrypt">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">ascii_decrypt</span><span class="p">(</span><span class="n">ciphertext</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function decrypts the given plaintext message using the index of each character in the</span>
-<span class="sd">    string as the number of characters to shift left in the set of Unicode code points.</span>
+<span class="sd">    This function decrypts the given plaintext message using the index of each</span>
+<span class="sd">    character in the string as the number of characters to shift left in the</span>
+<span class="sd">    set of Unicode code points.</span>
 
 <span class="sd">    :param ciphertext: The ciphertext message to decrypt</span>
 <span class="sd">    :return: A decrypted message, the plaintext</span>
