--- a/python/katas/_modules/codewars/beeramid.html
+++ b/python/katas/_modules/codewars/beeramid.html
@@ -257,7 +257,8 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.beeramid.beeramid">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">beeramid</span><span class="p">(</span><span class="n">bonus</span><span class="p">,</span> <span class="n">price</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">int</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns the height of a pyramid that is made of beers (a.k.a. &quot;beer&quot;-amid).</span>
+<span class="sd">    This function returns the height of a pyramid that is made of beers</span>
+<span class="sd">    (also known as &quot;beer&quot;-amid).</span>
 
 <span class="sd">    :param bonus: The input integer, the referral bonus</span>
 <span class="sd">    :param price: The input integer, the price of a can of beer</span>
