--- a/python/katas/_modules/codewars/beginner_series_number_1_school_paperwork.html
+++ b/python/katas/_modules/codewars/beginner_series_number_1_school_paperwork.html
@@ -255,16 +255,17 @@
 
 <div class="viewcode-block" id="paperwork">
 <a class="viewcode-back" href="../../codewars.html#codewars.beginner_series_number_1_school_paperwork.paperwork">[docs]</a>
-<span class="k">def</span><span class="w"> </span><span class="nf">paperwork</span><span class="p">(</span><span class="n">num_classmates</span><span class="p">:</span> <span class="nb">int</span><span class="p">,</span> <span class="n">num_papers</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">int</span><span class="p">:</span>
+<span class="k">def</span><span class="w"> </span><span class="nf">paperwork</span><span class="p">(</span><span class="n">classmates</span><span class="p">:</span> <span class="nb">int</span><span class="p">,</span> <span class="n">papers</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">int</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns the number of blank papers needed to copy :attr:`num_papers` papers</span>
-<span class="sd">    for :attr:`num_classmates` classmates.</span>
+<span class="sd">    This function returns the number of blank papers needed to copy</span>
+<span class="sd">    :attr:`num_papers` papers for :attr:`num_classmates` classmates.</span>
 
-<span class="sd">    :param num_classmates: An integer, the number of classmates</span>
-<span class="sd">    :param num_papers: An integer, the number of papers for each classmate</span>
-<span class="sd">    :return: The total number of papers, or zero if either input parameter is less than zero</span>
+<span class="sd">    :param classmates: An integer, the number of classmates</span>
+<span class="sd">    :param papers: An integer, the number of papers for each classmate</span>
+<span class="sd">    :return: The total number of papers, or zero if either input parameter is</span>
+<span class="sd">        less than zero</span>
 <span class="sd">    &quot;&quot;&quot;</span>
-    <span class="k">return</span> <span class="mi">0</span> <span class="k">if</span> <span class="n">num_classmates</span> <span class="o">&lt;</span> <span class="mi">0</span> <span class="ow">or</span> <span class="n">num_papers</span> <span class="o">&lt;</span> <span class="mi">0</span> <span class="k">else</span> <span class="n">num_classmates</span> <span class="o">*</span> <span class="n">num_papers</span></div>
+    <span class="k">return</span> <span class="mi">0</span> <span class="k">if</span> <span class="n">classmates</span> <span class="o">&lt;</span> <span class="mi">0</span> <span class="ow">or</span> <span class="n">papers</span> <span class="o">&lt;</span> <span class="mi">0</span> <span class="k">else</span> <span class="n">classmates</span> <span class="o">*</span> <span class="n">papers</span></div>
 
 </pre></div>
         </article>
