--- a/python/katas/_modules/codewars/beginner_series_number_4_cockroach.html
+++ b/python/katas/_modules/codewars/beginner_series_number_4_cockroach.html
@@ -257,7 +257,8 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.beginner_series_number_4_cockroach.cockroach_speed">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">cockroach_speed</span><span class="p">(</span><span class="n">kph</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function converts a cockroach&#39;s speed from kilometers per hour to centimeters per second.</span>
+<span class="sd">    This function converts a cockroach&#39;s speed from kilometers per hour to</span>
+<span class="sd">    centimeters per second.</span>
 
 <span class="sd">    :param kph: The input speed in kilometers per hour</span>
 <span class="sd">    :return: The same speed in centimeters per second</span>
