--- a/python/katas/_modules/codewars/big_factorial.html
+++ b/python/katas/_modules/codewars/big_factorial.html
@@ -257,11 +257,12 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.big_factorial.factorial">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">factorial</span><span class="p">(</span><span class="n">number</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">int</span> <span class="o">|</span> <span class="kc">None</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function calculates the factorial for the given integer without using recursion or any</span>
-<span class="sd">    built-in functions.</span>
+<span class="sd">    This function calculates the factorial for the given integer without using</span>
+<span class="sd">    recursion or any built-in functions.</span>
 
 <span class="sd">    :param number: The input integer</span>
-<span class="sd">    :return: The factorial of :attr:`number` or None if :attr:`number` is negative</span>
+<span class="sd">    :return: The factorial of :attr:`number` or None if :attr:`number` is</span>
+<span class="sd">        negative</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">if</span> <span class="n">number</span> <span class="o">&lt;</span> <span class="mi">0</span><span class="p">:</span>
         <span class="k">return</span> <span class="kc">None</span>
