--- a/python/katas/_modules/codewars/binary_to_text_ascii_conversion.html
+++ b/python/katas/_modules/codewars/binary_to_text_ascii_conversion.html
@@ -257,8 +257,9 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.binary_to_text_ascii_conversion.binary_to_string">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">binary_to_string</span><span class="p">(</span><span class="n">binary</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function converts the given binary string to ASCII text. The binary string is assumed to be</span>
-<span class="sd">    valid, i.e. its length is a multiple of 8. If the length is zero, an empty string is returned.</span>
+<span class="sd">    This function converts the given binary string to ASCII text. The binary</span>
+<span class="sd">    string is assumed to be valid, i.e., its length is a multiple of 8. If the</span>
+<span class="sd">    length is zero, an empty string is returned.</span>
 
 <span class="sd">    :param binary: The input string containing binary numbers (0&#39;s and 1&#39;s)</span>
 <span class="sd">    :return: A string containing ASCII text</span>
