--- a/python/katas/_modules/codewars/bingo_or_not.html
+++ b/python/katas/_modules/codewars/bingo_or_not.html
@@ -259,9 +259,10 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.bingo_or_not.bingo">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">bingo</span><span class="p">(</span><span class="n">array</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">int</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns &quot;WIN&quot; if any of the numbers in the given list of indexes, each</span>
-<span class="sd">    representing a position of a letter in the alphabet, can spell &quot;BINGO&quot;. The letters can be in</span>
-<span class="sd">    any order. If the letters do not spell &quot;BINGO&quot;, &quot;LOSE&quot; is returned.</span>
+<span class="sd">    This function returns &quot;WIN&quot; if any of the numbers in the given list of</span>
+<span class="sd">    indexes, each representing a position of a letter in the alphabet, can</span>
+<span class="sd">    spell &quot;BINGO&quot;. The letters can be in any order. If the letters do not spell</span>
+<span class="sd">    &quot;BINGO&quot;, &quot;LOSE&quot; is returned.</span>
 
 <span class="sd">    :param array: The input list of integers</span>
 <span class="sd">    :return: &quot;WIN&quot; or &quot;LOSE&quot;</span>
