--- a/python/katas/_modules/codewars/bits_battle.html
+++ b/python/katas/_modules/codewars/bits_battle.html
@@ -257,10 +257,11 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.bits_battle.bits_battle">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">bits_battle</span><span class="p">(</span><span class="n">numbers</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">int</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function counts the number of zeros in all even numbers and the number of ones in all odd</span>
-<span class="sd">    numbers. The number zero is not counted. Evens win if the number of ones is greater than the</span>
-<span class="sd">    number of zeros, odds win if the number of zeros is greater than the number of ones, and a tie</span>
-<span class="sd">    if both numbers are the same.</span>
+<span class="sd">    This function counts the number of zeros in all even numbers and the number</span>
+<span class="sd">    of ones in all odd numbers. The number zero is not counted. Evens win if the</span>
+<span class="sd">    number of ones is greater than the number of zeros, odds win if the number</span>
+<span class="sd">    of zeros is greater than the number of ones, and a tie if both numbers are</span>
+<span class="sd">    the same.</span>
 
 <span class="sd">    :param numbers: The input list of integers</span>
 <span class="sd">    :return: A string stating the winner or a tie</span>
