--- a/python/katas/_modules/codewars/can_we_divide_it.html
+++ b/python/katas/_modules/codewars/can_we_divide_it.html
@@ -257,13 +257,14 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.can_we_divide_it.is_divide_by">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">is_divide_by</span><span class="p">(</span><span class="n">number</span><span class="p">:</span> <span class="nb">int</span><span class="p">,</span> <span class="n">first_number</span><span class="p">:</span> <span class="nb">int</span><span class="p">,</span> <span class="n">second_number</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">bool</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns True if :attr:`number` is divisible by both :attr:`first_number` and</span>
-<span class="sd">    :attr:`second_number`.</span>
+<span class="sd">    This function returns True if :attr:`number` is divisible by both</span>
+<span class="sd">    :attr:`first_number` and :attr:`second_number`.</span>
 
 <span class="sd">    :param number: The input integer</span>
 <span class="sd">    :param first_number: The first divisor</span>
 <span class="sd">    :param second_number: The second divisor</span>
-<span class="sd">    :return: True if :attr:`number` is divisible by the latter two integers, False otherwise</span>
+<span class="sd">    :return: True if :attr:`number` is divisible by the latter two integers,</span>
+<span class="sd">        False otherwise</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">return</span> <span class="n">number</span> <span class="o">%</span> <span class="n">first_number</span> <span class="o">==</span> <span class="mi">0</span> <span class="ow">and</span> <span class="n">number</span> <span class="o">%</span> <span class="n">second_number</span> <span class="o">==</span> <span class="mi">0</span></div>
 
