--- a/python/katas/_modules/codewars/cat_years_dog_years.html
+++ b/python/katas/_modules/codewars/cat_years_dog_years.html
@@ -257,11 +257,12 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.cat_years_dog_years.human_years_cat_years_dog_years">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">human_years_cat_years_dog_years</span><span class="p">(</span><span class="n">human_years</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function calculates a cat&#39;s age and a dog&#39;s age given a human&#39;s age in years.</span>
+<span class="sd">    This function calculates a cat&#39;s age and a dog&#39;s age given a human&#39;s age in</span>
+<span class="sd">    years.</span>
 
 <span class="sd">    :param human_years: The input integer, the age of a human in years</span>
-<span class="sd">    :return: A list containing the human&#39;s age (in years), the cat&#39;s age (in years), and the dog&#39;s</span>
-<span class="sd">        age (in years)</span>
+<span class="sd">    :return: A list containing the human&#39;s age (in years), the cat&#39;s age (in</span>
+<span class="sd">        years), and the dog&#39;s age (in years)</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">if</span> <span class="n">human_years</span> <span class="o">==</span> <span class="mi">1</span><span class="p">:</span>
         <span class="k">return</span> <span class="p">[</span><span class="mi">1</span><span class="p">,</span> <span class="mi">15</span><span class="p">,</span> <span class="mi">15</span><span class="p">]</span>
