--- a/python/katas/_modules/codewars/catching_car_mileage_numbers.html
+++ b/python/katas/_modules/codewars/catching_car_mileage_numbers.html
@@ -257,15 +257,18 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.catching_car_mileage_numbers.is_interesting">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">is_interesting</span><span class="p">(</span><span class="n">number</span><span class="p">:</span> <span class="nb">int</span><span class="p">,</span> <span class="n">awesome_phrases</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">int</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="nb">int</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns 2 if :attr:`number`, which represents the mileage on an odometer, is an</span>
-<span class="sd">    &quot;interesting number&quot;, 1 if the &quot;interesting number&quot; is a mile or two miles ahead, or 0 if</span>
-<span class="sd">    :attr:`number` is not an &quot;interesting number&quot;. A number is &quot;interesting&quot; if one of the following</span>
-<span class="sd">    is true: the number has one digit [1-9] followed by all zeros (e.g. 20000), the number contains</span>
-<span class="sd">    the same digits (e.g. 7777), the digits in the number are increasing (e.g. 1234), the digits in</span>
-<span class="sd">    the number are decreasing (e.g. 9876), the number is a palindrome (e.g. 12321), or the number</span>
-<span class="sd">    matches any of the numbers in :attr:`awesome_phrases`. For sequences that are increasing, the</span>
-<span class="sd">    digit 0 must come after 9, and for sequences that are decreasing, the digit 0 must come after 1.</span>
-<span class="sd">    Only numbers greater than 99 are considered &quot;interesting&quot;.</span>
+<span class="sd">    This function returns 2 if :attr:`number`, which represents the mileage on</span>
+<span class="sd">    an odometer, is an &quot;interesting number&quot;, 1 if the &quot;interesting number&quot; is a</span>
+<span class="sd">    mile or two miles ahead, or 0 if :attr:`number` is not an</span>
+<span class="sd">    &quot;interesting number&quot;. A number is &quot;interesting&quot; if one of the following is</span>
+<span class="sd">    true: the number has one digit [1-9] followed by all zeros (e.g., 20000),</span>
+<span class="sd">    the number contains the same digits (e.g., 7777), the digits in the number</span>
+<span class="sd">    are increasing (e.g., 1234), the digits in the number are decreasing (e.g.,</span>
+<span class="sd">    9876), the number is a palindrome (e.g. 12321), or the number matches any</span>
+<span class="sd">    of the numbers in :attr:`awesome_phrases`. For sequences that are</span>
+<span class="sd">    increasing, the digit 0 must come after 9, and for sequences that are</span>
+<span class="sd">    decreasing, the digit 0 must come after 1. Only numbers greater than 99 are</span>
+<span class="sd">    considered &quot;interesting&quot;.</span>
 
 <span class="sd">    :param number: The input integer representing mileage on an odometer</span>
 <span class="sd">    :param awesome_phrases: A list of integers, may be empty</span>
@@ -274,12 +277,12 @@
     <span class="k">if</span> <span class="n">number</span> <span class="o">&lt;</span> <span class="mi">100</span><span class="p">:</span>
         <span class="k">return</span> <span class="mi">1</span> <span class="k">if</span> <span class="n">number</span> <span class="ow">in</span> <span class="p">[</span><span class="mi">98</span><span class="p">,</span> <span class="mi">99</span><span class="p">]</span> <span class="k">else</span> <span class="mi">0</span>
     <span class="k">for</span> <span class="n">idx</span><span class="p">,</span> <span class="n">num</span> <span class="ow">in</span> <span class="nb">enumerate</span><span class="p">([</span><span class="n">number</span><span class="p">,</span> <span class="n">number</span> <span class="o">+</span> <span class="mi">1</span><span class="p">,</span> <span class="n">number</span> <span class="o">+</span> <span class="mi">2</span><span class="p">]):</span>
-        <span class="n">number_str</span> <span class="o">=</span> <span class="nb">str</span><span class="p">(</span><span class="n">num</span><span class="p">)</span>
-        <span class="k">if</span> <span class="n">number_str</span><span class="p">[</span><span class="mi">1</span><span class="p">:]</span> <span class="o">==</span> <span class="nb">len</span><span class="p">(</span><span class="n">number_str</span><span class="p">[</span><span class="mi">1</span><span class="p">:])</span> <span class="o">*</span> <span class="s2">&quot;0&quot;</span> <span class="ow">or</span> <span class="n">num</span> <span class="ow">in</span> <span class="n">awesome_phrases</span><span class="p">:</span>
+        <span class="n">num_str</span> <span class="o">=</span> <span class="nb">str</span><span class="p">(</span><span class="n">num</span><span class="p">)</span>
+        <span class="k">if</span> <span class="n">num_str</span><span class="p">[</span><span class="mi">1</span><span class="p">:]</span> <span class="o">==</span> <span class="nb">len</span><span class="p">(</span><span class="n">num_str</span><span class="p">[</span><span class="mi">1</span><span class="p">:])</span> <span class="o">*</span> <span class="s2">&quot;0&quot;</span> <span class="ow">or</span> <span class="n">num</span> <span class="ow">in</span> <span class="n">awesome_phrases</span><span class="p">:</span>
             <span class="k">return</span> <span class="mi">2</span> <span class="k">if</span> <span class="n">idx</span> <span class="o">==</span> <span class="mi">0</span> <span class="k">else</span> <span class="mi">1</span>
-        <span class="k">if</span> <span class="s2">&quot;&quot;</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="nb">reversed</span><span class="p">(</span><span class="n">number_str</span><span class="p">))</span> <span class="o">==</span> <span class="n">number_str</span> <span class="ow">or</span> <span class="nb">len</span><span class="p">(</span><span class="nb">set</span><span class="p">(</span><span class="n">number_str</span><span class="p">))</span> <span class="o">==</span> <span class="mi">1</span><span class="p">:</span>
+        <span class="k">if</span> <span class="s2">&quot;&quot;</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="nb">reversed</span><span class="p">(</span><span class="n">num_str</span><span class="p">))</span> <span class="o">==</span> <span class="n">num_str</span> <span class="ow">or</span> <span class="nb">len</span><span class="p">(</span><span class="nb">set</span><span class="p">(</span><span class="n">num_str</span><span class="p">))</span> <span class="o">==</span> <span class="mi">1</span><span class="p">:</span>
             <span class="k">return</span> <span class="mi">2</span> <span class="k">if</span> <span class="n">idx</span> <span class="o">==</span> <span class="mi">0</span> <span class="k">else</span> <span class="mi">1</span>
-        <span class="k">if</span> <span class="n">number_str</span> <span class="ow">in</span> <span class="s2">&quot;9876543210&quot;</span> <span class="ow">or</span> <span class="n">number_str</span> <span class="ow">in</span> <span class="s2">&quot;1234567890&quot;</span><span class="p">:</span>
+        <span class="k">if</span> <span class="n">num_str</span> <span class="ow">in</span> <span class="s2">&quot;9876543210&quot;</span> <span class="ow">or</span> <span class="n">num_str</span> <span class="ow">in</span> <span class="s2">&quot;1234567890&quot;</span><span class="p">:</span>
             <span class="k">return</span> <span class="mi">2</span> <span class="k">if</span> <span class="n">idx</span> <span class="o">==</span> <span class="mi">0</span> <span class="k">else</span> <span class="mi">1</span>
     <span class="k">return</span> <span class="mi">0</span></div>
 
