--- a/python/katas/_modules/codewars/ce_star_s_star_r_star_d_strings.html
+++ b/python/katas/_modules/codewars/ce_star_s_star_r_star_d_strings.html
@@ -257,12 +257,13 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.ce_star_s_star_r_star_d_strings.uncensor">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">uncensor</span><span class="p">(</span><span class="n">infected</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span> <span class="n">discovered</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function replaces all the asterisk characters in :attr:`infected` with all the characters</span>
-<span class="sd">    in :attr:`discovered`. It is assumed that the number of asterisks is equal to the number of</span>
-<span class="sd">    characters in :attr:`discovered`.</span>
+<span class="sd">    This function replaces all the asterisk characters in :attr:`infected` with</span>
+<span class="sd">    all the characters in :attr:`discovered`. It is assumed that the number of</span>
+<span class="sd">    asterisks is equal to the number of characters in :attr:`discovered`.</span>
 
 <span class="sd">    :param infected: The input string containing asterisks</span>
-<span class="sd">    :param discovered: The input string containing characters to use in the replacement process</span>
+<span class="sd">    :param discovered: The input string containing characters to use in the</span>
+<span class="sd">        replacement process</span>
 <span class="sd">    :return: A string with all the asterisks replaced</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">arr</span> <span class="o">=</span> <span class="p">[]</span>
