--- a/python/katas/_modules/codewars/celsius_converter.html
+++ b/python/katas/_modules/codewars/celsius_converter.html
@@ -257,9 +257,10 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.celsius_converter.weather_info">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">weather_info</span><span class="p">(</span><span class="n">fahrenheit</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function converts the given Fahrenheit temperature to Celsius. If the Celsius temperature</span>
-<span class="sd">    is greater than zero, then a string containing &quot;above freezing&quot; is returned. Otherwise, a string</span>
-<span class="sd">    containing &quot;freezing&quot; is returned.</span>
+<span class="sd">    This function converts the given Fahrenheit temperature to Celsius. If the</span>
+<span class="sd">    Celsius temperature is greater than zero, then a string containing</span>
+<span class="sd">    &quot;above freezing&quot; is returned. Otherwise, a string containing &quot;freezing&quot; is</span>
+<span class="sd">    returned.</span>
 
 <span class="sd">    :param fahrenheit: The input Fahrenheit temperature</span>
 <span class="sd">    :return: A string that contains &quot;above freezing&quot; or &quot;freezing&quot;</span>
