--- a/python/katas/_modules/codewars/toleetspeak.html
+++ b/python/katas/_modules/codewars/toleetspeak.html
@@ -257,8 +257,8 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.toleetspeak.to_leet_speak">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">to_leet_speak</span><span class="p">(</span><span class="n">string</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function converts each character in the given string to a character in the leetspeak</span>
-<span class="sd">    language.</span>
+<span class="sd">    This function converts each character in the given string to a character in</span>
+<span class="sd">    the leetspeak language.</span>
 
 <span class="sd">    :param string: The input string</span>
 <span class="sd">    :return: A string that uses letters from the leetspeak language</span>
