--- a/python/katas/_modules/codewars/triangle_area.html
+++ b/python/katas/_modules/codewars/triangle_area.html
@@ -257,8 +257,9 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.triangle_area.t_area">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">t_area</span><span class="p">(</span><span class="n">triangle</span><span class="p">:</span> <span class="nb">str</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function calculates the area of a triangle that is represented by a list of dots and</span>
-<span class="sd">    spaces. Each space between a dot, both horizontal and vertical, represents a length of one.</span>
+<span class="sd">    This function calculates the area of a triangle that is represented by a</span>
+<span class="sd">    list of dots and spaces. Each space between a dot, both horizontal and</span>
+<span class="sd">    vertical, represents a length of one.</span>
 
 <span class="sd">    :param triangle: The input string representing a triangle</span>
 <span class="sd">    :return: The area of the triangle</span>
