--- a/python/katas/_modules/codewars/triangular_treasure.html
+++ b/python/katas/_modules/codewars/triangular_treasure.html
@@ -257,9 +257,10 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.triangular_treasure.triangular">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">triangular</span><span class="p">(</span><span class="n">nth</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">int</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function calculates a triangular number given :attr:`nth`. A triangular number is the</span>
-<span class="sd">    number of objects arranged in an equilateral triangle. For example, given :attr:`nth` = 4, the</span>
-<span class="sd">    triangular number 10 will be returned, because (4 * (4 + 1)) / 2 = 10.</span>
+<span class="sd">    This function calculates a triangular number given :attr:`nth`. A</span>
+<span class="sd">    triangular number is the number of objects arranged in an equilateral</span>
+<span class="sd">    triangle. For example, given :attr:`nth` = 4, the triangular number 10 will</span>
+<span class="sd">    be returned, because (4 * (4 + 1)) / 2 = 10.</span>
 
 <span class="sd">    :param nth: An integer</span>
 <span class="sd">    :return: A triangular number</span>
