--- a/python/katas/_modules/codewars/triple_trouble.html
+++ b/python/katas/_modules/codewars/triple_trouble.html
@@ -257,10 +257,10 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.triple_trouble.triple_trouble">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">triple_trouble</span><span class="p">(</span><span class="n">one</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span> <span class="n">two</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span> <span class="n">three</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function groups together characters from each of the three input strings based on their</span>
-<span class="sd">    index and returns a concatenated string containing all the groups. It is assumed that all the</span>
-<span class="sd">    strings have the same length. For example, given &quot;ad&quot;, &quot;be&quot;, and &quot;cf&quot;, the string &quot;abcdef&quot; is</span>
-<span class="sd">    returned.</span>
+<span class="sd">    This function groups together characters from each of the three input</span>
+<span class="sd">    strings based on their index and returns a concatenated string containing</span>
+<span class="sd">    all the groups. It is assumed that all the strings have the same length.</span>
+<span class="sd">    For example, given &quot;ad&quot;, &quot;be&quot;, and &quot;cf&quot;, the string &quot;abcdef&quot; is returned.</span>
 
 <span class="sd">    :param one: The first input string</span>
 <span class="sd">    :param two: The second input string</span>
