--- a/python/katas/_modules/codewars/turn_with_a_compass.html
+++ b/python/katas/_modules/codewars/turn_with_a_compass.html
@@ -257,9 +257,9 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.turn_with_a_compass.direction">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">direction</span><span class="p">(</span><span class="n">facing</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span> <span class="n">turn</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns the direction (north, northeast, east, southeast, south, southwest, west,</span>
-<span class="sd">    or northwest) after turning left or right :attr:`turn` degrees from the initial direction</span>
-<span class="sd">    :attr:`facing`.</span>
+<span class="sd">    This function returns the direction (north, northeast, east, southeast,</span>
+<span class="sd">    south, southwest, west, or northwest) after turning left or right</span>
+<span class="sd">    :attr:`turn` degrees from the initial direction :attr:`facing`.</span>
 
 <span class="sd">    :param facing: One of eight directions that someone is initially facing</span>
 <span class="sd">    :param turn: The number of degrees to turn in increments of 45</span>
