--- a/python/katas/_modules/codewars/twice_as_old.html
+++ b/python/katas/_modules/codewars/twice_as_old.html
@@ -257,13 +257,15 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.twice_as_old.twice_as_old">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">twice_as_old</span><span class="p">(</span><span class="n">dad_years_old</span><span class="p">:</span> <span class="nb">int</span><span class="p">,</span> <span class="n">son_years_old</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">int</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function calculates how many years ago when a father&#39;s age was twice the current age of his</span>
-<span class="sd">    son, or how many years from now when the father&#39;s age will be twice his son&#39;s current age.</span>
+<span class="sd">    This function calculates how many years ago when a father&#39;s age was twice</span>
+<span class="sd">    the current age of his son, or how many years from now when the father&#39;s</span>
+<span class="sd">    age will be twice his son&#39;s current age.</span>
 
 <span class="sd">    :param dad_years_old: A father&#39;s current age</span>
 <span class="sd">    :param son_years_old: His son&#39;s current age</span>
-<span class="sd">    :return: The number of years ago when a father&#39;s age was twice his son&#39;s current age, or the</span>
-<span class="sd">        number of years until the father&#39;s age will be twice his son&#39;s current age</span>
+<span class="sd">    :return: The number of years ago when a father&#39;s age was twice his son&#39;s</span>
+<span class="sd">        current age, or the number of years until the father&#39;s age will be</span>
+<span class="sd">        twice his son&#39;s current age</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">if</span> <span class="n">son_years_old</span> <span class="o">==</span> <span class="mi">0</span><span class="p">:</span>
         <span class="k">return</span> <span class="n">dad_years_old</span>
