--- a/python/katas/_modules/codewars/two_joggers.html
+++ b/python/katas/_modules/codewars/two_joggers.html
@@ -257,8 +257,9 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.two_joggers.nbr_of_laps">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">nbr_of_laps</span><span class="p">(</span><span class="n">bob</span><span class="p">,</span> <span class="n">charlie</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns the number of laps that :attr;`bob` and :attr:`charlie` need to make in</span>
-<span class="sd">    order to meet each other again at the start line.</span>
+<span class="sd">    This function returns the number of laps that :attr;`bob` and</span>
+<span class="sd">    :attr:`charlie` need to make in order to meet each other again at the start</span>
+<span class="sd">    line.</span>
 
 <span class="sd">    :param bob: The first jogger</span>
 <span class="sd">    :param charlie: The second jogger</span>
@@ -272,11 +273,14 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.two_joggers.count">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">count</span><span class="p">(</span><span class="n">first_jogger</span><span class="p">,</span> <span class="n">second_jogger</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This helper function calculates the number of laps that :attr:`first_jogger` needs to make in</span>
-<span class="sd">    order to meet :attr:`second_jogger` at the start line, i.e. the former is a multiple of the</span>
-<span class="sd">    latter. For example, given 3 and 5, this function will return 5 because 15 mod 5 equals 0.</span>
+<span class="sd">    This helper function calculates the number of laps that</span>
+<span class="sd">    :attr:`first_jogger` needs to make in order to meet :attr:`second_jogger`</span>
+<span class="sd">    at the start line, i.e. the former is a multiple of the latter. For</span>
+<span class="sd">    example, given 3 and 5, this function will return 5 because 15 mod 5 equals</span>
+<span class="sd">    0.</span>
 
-<span class="sd">    :param first_jogger: The first jogger, an integer that is a multiple of :attr:`second_jogger`</span>
+<span class="sd">    :param first_jogger: The first jogger, an integer that is a multiple of</span>
+<span class="sd">        :attr:`second_jogger`</span>
 <span class="sd">    :param second_jogger: The second jogger</span>
 <span class="sd">    :return: The number of laps for :attr:`first_jogger`</span>
 <span class="sd">    &quot;&quot;&quot;</span>
