--- a/python/katas/_modules/codewars/weight_for_weight.html
+++ b/python/katas/_modules/codewars/weight_for_weight.html
@@ -257,9 +257,10 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.weight_for_weight.order_weight">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">order_weight</span><span class="p">(</span><span class="n">string</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function sorts the given list of weights by the sum of all the digits in each weight. If</span>
-<span class="sd">    two weights are the same, then the two are sorted in lexicographical order, i.e. each weight is</span>
-<span class="sd">    treated as a string not an int when it comes to sorting equal weights.</span>
+<span class="sd">    This function sorts the given list of weights by the sum of all the digits</span>
+<span class="sd">    in each weight. If two weights are the same, then the two are sorted in</span>
+<span class="sd">    lexicographical order, i.e. each weight is treated as a string not an int</span>
+<span class="sd">    when it comes to sorting equal weights.</span>
 
 <span class="sd">    :param string: The input string representing weights</span>
 <span class="sd">    :return: A string of weights sorted according to the description above</span>
