--- a/python/katas/_modules/codewars/what_is_between.html
+++ b/python/katas/_modules/codewars/what_is_between.html
@@ -257,8 +257,8 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.what_is_between.between">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">between</span><span class="p">(</span><span class="n">start</span><span class="p">:</span> <span class="nb">int</span><span class="p">,</span> <span class="n">end</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">list</span><span class="p">[</span><span class="nb">int</span><span class="p">]:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns a list that contains all the integers between :attr:`start` (inclusive)</span>
-<span class="sd">    and :attr:`end` (inclusive).</span>
+<span class="sd">    This function returns a list that contains all the integers between</span>
+<span class="sd">    :attr:`start` (inclusive) and :attr:`end` (inclusive).</span>
 
 <span class="sd">    :param start: The first integer in the list of integers</span>
 <span class="sd">    :param end: The last integer in the list of integers</span>
