--- a/python/katas/_modules/codewars/whats_the_real_floor.html
+++ b/python/katas/_modules/codewars/whats_the_real_floor.html
@@ -257,12 +257,14 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.whats_the_real_floor.get_real_floor">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">get_real_floor</span><span class="p">(</span><span class="n">floor</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">int</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns the real floor of a building. In the United States, the first floor is</span>
-<span class="sd">    actually the ground floor, and there is no thirteenth floor. If :attr:`floor` is between 1 and</span>
-<span class="sd">    12, inclusive, then :attr:`floor` - 1 is returned. If :attr:`floor` is greater than 13, then</span>
-<span class="sd">    :attr:`floor` - 2 is returned. Basements (negatives) stay the same.</span>
+<span class="sd">    This function returns the real floor of a building. In the United States,</span>
+<span class="sd">    the first floor is actually the ground floor, and there is no thirteenth</span>
+<span class="sd">    floor. If :attr:`floor` is between 1 and 12, inclusive, then :attr:`floor`</span>
+<span class="sd">    - 1 is returned. If :attr:`floor` is greater than 13, then :attr:`floor` -</span>
+<span class="sd">    2 is returned. Basements (negatives) stay the same.</span>
 
-<span class="sd">    :param floor: The input integer representing the floor of a building in the United States</span>
+<span class="sd">    :param floor: The input integer representing the floor of a building in the</span>
+<span class="sd">        United States</span>
 <span class="sd">    :return: The real floor of the building</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">if</span> <span class="n">floor</span> <span class="o">&lt;=</span> <span class="mi">0</span><span class="p">:</span>
