--- a/python/katas/_modules/codewars/when_we_are_equal_we_are_identical.html
+++ b/python/katas/_modules/codewars/when_we_are_equal_we_are_identical.html
@@ -259,8 +259,8 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.when_we_are_equal_we_are_identical.make_identical">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">make_identical</span><span class="p">(</span><span class="n">string</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function interns the given string, i.e. adds it to the global table of interned strings,</span>
-<span class="sd">    similar to how strings are interned in Java.</span>
+<span class="sd">    This function interns the given string, i.e. adds it to the global table of</span>
+<span class="sd">    interned strings, similar to how strings are interned in Java.</span>
 
 <span class="sd">    :param string: The string to intern</span>
 <span class="sd">    :return: The string itself or the previously interned string</span>
