--- a/python/katas/_modules/codewars/word_a10n_abbreviation.html
+++ b/python/katas/_modules/codewars/word_a10n_abbreviation.html
@@ -259,8 +259,9 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.word_a10n_abbreviation.abbreviate">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">abbreviate</span><span class="p">(</span><span class="n">sentence</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function abbreviates all words in the given string that contain more than three characters.</span>
-<span class="sd">    Words do not have to be delimited by spaces, e.g. &quot;inter-continental&quot; will become &quot;i3r-c9l&quot;.</span>
+<span class="sd">    This function abbreviates all words in the given string that contain more</span>
+<span class="sd">    than three characters. Words do not have to be delimited by spaces, e.g.,</span>
+<span class="sd">    &quot;inter-continental&quot; will become &quot;i3r-c9l&quot;.</span>
 
 <span class="sd">    :param sentence: The input string</span>
 <span class="sd">    :return: A string containing abbreviated words</span>
@@ -285,8 +286,8 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.word_a10n_abbreviation.abbreviate_word">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">abbreviate_word</span><span class="p">(</span><span class="n">word</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function abbreviates :attr:`word` if it contains more than three characters. Otherwise, the</span>
-<span class="sd">    word is returned.</span>
+<span class="sd">    This function abbreviates :attr:`word` if it contains more than three</span>
+<span class="sd">    characters. Otherwise, the word is returned.</span>
 
 <span class="sd">    :param word: The word to abbreviate</span>
 <span class="sd">    :return: The abbreviated word if it contains more than three characters</span>
