--- a/python/katas/_modules/codewars/word_mesh.html
+++ b/python/katas/_modules/codewars/word_mesh.html
@@ -257,11 +257,12 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.word_mesh.word_mesh">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">word_mesh</span><span class="p">(</span><span class="n">words</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns a string in which the characters represent substrings that are at the end</span>
-<span class="sd">    of one word in the given list of words and begin with the next word in the list. For example,</span>
-<span class="sd">    given &quot;cat attack kitchen engrave&quot;, the function will return &quot;atken&quot; (&quot;at&quot;, &quot;k&quot;, and &quot;en&quot;). If</span>
-<span class="sd">    there are no substrings at the end of one word that appear at the beginning of the next word,</span>
-<span class="sd">    &quot;failed to mesh&quot; is returned.</span>
+<span class="sd">    This function returns a string in which the characters represent substrings</span>
+<span class="sd">    that are at the end of one word in the given list of words and begin with</span>
+<span class="sd">    the next word in the list. For example, given &quot;cat attack kitchen engrave&quot;,</span>
+<span class="sd">    the function will return &quot;atken&quot; (&quot;at&quot;, &quot;k&quot;, and &quot;en&quot;). If there are no</span>
+<span class="sd">    substrings at the end of one word that appear at the beginning of the next</span>
+<span class="sd">    word, &quot;failed to mesh&quot; is returned.</span>
 
 <span class="sd">    :param words: A space-delimited list of words</span>
 <span class="sd">    :return: A string that contains substrings, or &quot;failed to mesh&quot;</span>
