--- a/python/katas/_modules/codewars/word_to_binary.html
+++ b/python/katas/_modules/codewars/word_to_binary.html
@@ -257,11 +257,12 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.word_to_binary.word_to_bin">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">word_to_bin</span><span class="p">(</span><span class="n">word</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">list</span><span class="p">[</span><span class="nb">str</span><span class="p">]:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns a list of ASCII codes as binary strings, each representing a character in</span>
-<span class="sd">    :attr:`word`.</span>
+<span class="sd">    This function returns a list of ASCII codes as binary strings, each</span>
+<span class="sd">    representing a character in :attr:`word`.</span>
 
 <span class="sd">    :param word: The input string</span>
-<span class="sd">    :return: A list of strings, each representing an ASCII code in an 8-digit binary format</span>
+<span class="sd">    :return: A list of strings, each representing an ASCII code in an 8-digit</span>
+<span class="sd">        binary format</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">return</span> <span class="p">[</span><span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="nb">ord</span><span class="p">(</span><span class="n">char</span><span class="p">)</span><span class="si">:</span><span class="s2">08b</span><span class="si">}</span><span class="s2">&quot;</span> <span class="k">for</span> <span class="n">char</span> <span class="ow">in</span> <span class="n">word</span><span class="p">]</span></div>
 
