--- a/python/katas/_modules/codewars/working_with_arrays_ii.html
+++ b/python/katas/_modules/codewars/working_with_arrays_ii.html
@@ -257,7 +257,8 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.working_with_arrays_ii.remove_nth_element">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">remove_nth_element</span><span class="p">(</span><span class="n">arr</span><span class="p">:</span> <span class="nb">list</span><span class="p">,</span> <span class="n">index</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">list</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function removes an element at the given index from a list and returns a new list.</span>
+<span class="sd">    This function removes an element at the given index from a list and returns</span>
+<span class="sd">    a new list.</span>
 
 <span class="sd">    :param arr: A list</span>
 <span class="sd">    :param index: The index of the element to remove</span>
