--- a/python/katas/_modules/codewars/your_order_please.html
+++ b/python/katas/_modules/codewars/your_order_please.html
@@ -259,11 +259,13 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.your_order_please.order">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">order</span><span class="p">(</span><span class="n">sentence</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns the words in :attr:`sentence` in sorted ascending order based on the</span>
-<span class="sd">    numbers in each word in the string.</span>
+<span class="sd">    This function returns the words in :attr:`sentence` in sorted ascending</span>
+<span class="sd">    order based on the numbers in each word in the string.</span>
 
-<span class="sd">    :param sentence: The input string that contains words with a one-digit number in each word</span>
-<span class="sd">    :return: The words sorted in ascending order based on the number in each word</span>
+<span class="sd">    :param sentence: The input string that contains words with a one-digit</span>
+<span class="sd">        number in each word</span>
+<span class="sd">    :return: The words sorted in ascending order based on the number in each</span>
+<span class="sd">        word</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">if</span> <span class="n">sentence</span> <span class="o">==</span> <span class="s2">&quot;&quot;</span><span class="p">:</span>
         <span class="k">return</span> <span class="s2">&quot;&quot;</span>
