--- a/python/katas/_modules/codewars/zero_terminated_sum.html
+++ b/python/katas/_modules/codewars/zero_terminated_sum.html
@@ -257,10 +257,11 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.zero_terminated_sum.largest_sum">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">largest_sum</span><span class="p">(</span><span class="n">string</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">int</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    Given a string in which each number is delimited by a zero, this function sums all the digits in</span>
-<span class="sd">    each number and returns the largest sum.</span>
+<span class="sd">    Given a string in which each number is delimited by a zero, this function</span>
+<span class="sd">    sums all the digits in each number and returns the largest sum.</span>
 
-<span class="sd">    :param string: The input string representing a zero-delimited list of numbers</span>
+<span class="sd">    :param string: The input string representing a zero-delimited list of</span>
+<span class="sd">        numbers</span>
 <span class="sd">    :return: The largest sum</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">arr</span> <span class="o">=</span> <span class="p">[</span><span class="nb">sum</span><span class="p">(</span><span class="nb">int</span><span class="p">(</span><span class="n">char</span><span class="p">)</span> <span class="k">for</span> <span class="n">char</span> <span class="ow">in</span> <span class="n">digits</span><span class="p">)</span> <span class="k">for</span> <span class="n">digits</span> <span class="ow">in</span> <span class="n">string</span><span class="o">.</span><span class="n">split</span><span class="p">(</span><span class="s2">&quot;0&quot;</span><span class="p">)</span> <span class="k">if</span> <span class="n">digits</span><span class="p">]</span>
