--- a/python/katas/_modules/codewars/all_star_code_challenge_number_20.html
+++ b/python/katas/_modules/codewars/all_star_code_challenge_number_20.html
@@ -257,13 +257,15 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.all_star_code_challenge_number_20.add_arrays">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">add_arrays</span><span class="p">(</span><span class="n">arr_1</span><span class="p">:</span> <span class="nb">list</span><span class="p">,</span> <span class="n">arr_2</span><span class="p">:</span> <span class="nb">list</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">list</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function adds (if numbers) or concatenates (if strings) elements in :attr:`arr_1` with the</span>
-<span class="sd">    elements in :attr:`arr_2` that are at the same index position. Both lists must be of the same</span>
-<span class="sd">    length, or an error will be raised if they are not.</span>
+<span class="sd">    This function adds (if numbers) or concatenates (if strings) elements in</span>
+<span class="sd">    :attr:`arr_1` with the elements in :attr:`arr_2` that are at the same index</span>
+<span class="sd">    position. Both lists must be of the same length, or an error will be raised</span>
+<span class="sd">    if they are not.</span>
 
 <span class="sd">    :param arr_1: The first input list</span>
 <span class="sd">    :param arr_2: The second input list</span>
-<span class="sd">    :return: A new list with the elements from both lists added or concatenated together</span>
+<span class="sd">    :return: A new list with the elements from both lists added or concatenated</span>
+<span class="sd">        together</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">if</span> <span class="nb">len</span><span class="p">(</span><span class="n">arr_1</span><span class="p">)</span> <span class="o">!=</span> <span class="nb">len</span><span class="p">(</span><span class="n">arr_2</span><span class="p">):</span>
         <span class="k">raise</span> <span class="ne">ValueError</span>
