--- a/python/katas/_modules/codewars/alternate_case.html
+++ b/python/katas/_modules/codewars/alternate_case.html
@@ -252,22 +252,20 @@
 <span class="sd">:Author: BJ Peter Dela Cruz</span>
 <span class="sd">&quot;&quot;&quot;</span>
 
-<span class="kn">from</span><span class="w"> </span><span class="nn">string</span><span class="w"> </span><span class="kn">import</span> <span class="n">ascii_lowercase</span> <span class="k">as</span> <span class="n">lowercase</span>
+<span class="kn">from</span><span class="w"> </span><span class="nn">string</span><span class="w"> </span><span class="kn">import</span> <span class="n">ascii_lowercase</span> <span class="k">as</span> <span class="n">ascii</span>
 
 
 <div class="viewcode-block" id="alternate_case">
 <a class="viewcode-back" href="../../codewars.html#codewars.alternate_case.alternate_case">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">alternate_case</span><span class="p">(</span><span class="n">string</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function switches the case in the given string, i.e. all lowercase letters are turned to</span>
-<span class="sd">    uppercase letters, and vice versa.</span>
+<span class="sd">    This function switches the case in the given string, i.e. all lowercase</span>
+<span class="sd">    letters are turned to uppercase letters, and vice versa.</span>
 
 <span class="sd">    :param string: The input string</span>
 <span class="sd">    :return: The same string but with the cases of its letters switched</span>
 <span class="sd">    &quot;&quot;&quot;</span>
-    <span class="k">return</span> <span class="s2">&quot;&quot;</span><span class="o">.</span><span class="n">join</span><span class="p">(</span>
-        <span class="p">[</span><span class="n">char</span><span class="o">.</span><span class="n">upper</span><span class="p">()</span> <span class="k">if</span> <span class="n">char</span> <span class="ow">in</span> <span class="n">lowercase</span> <span class="k">else</span> <span class="n">char</span><span class="o">.</span><span class="n">lower</span><span class="p">()</span> <span class="k">for</span> <span class="n">char</span> <span class="ow">in</span> <span class="n">string</span><span class="p">]</span>
-    <span class="p">)</span></div>
+    <span class="k">return</span> <span class="s2">&quot;&quot;</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">c</span><span class="o">.</span><span class="n">upper</span><span class="p">()</span> <span class="k">if</span> <span class="n">c</span> <span class="ow">in</span> <span class="n">ascii</span> <span class="k">else</span> <span class="n">c</span><span class="o">.</span><span class="n">lower</span><span class="p">()</span> <span class="k">for</span> <span class="n">c</span> <span class="ow">in</span> <span class="n">string</span><span class="p">)</span></div>
 
 </pre></div>
         </article>
