--- a/python/katas/_modules/codewars/alternate_logic.html
+++ b/python/katas/_modules/codewars/alternate_logic.html
@@ -257,11 +257,12 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.alternate_logic.alt_or">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">alt_or</span><span class="p">(</span><span class="n">lst</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns True if at least one True is found in the given list, False otherwise.</span>
-<span class="sd">    Note that the or operator is not used.</span>
+<span class="sd">    This function returns True if at least one True is found in the given list,</span>
+<span class="sd">    False otherwise. Note that the or operator is not used.</span>
 
 <span class="sd">    :param lst: The input list of booleans</span>
-<span class="sd">    :return: None if the list is empty or None, True if True is found in the list, or False</span>
+<span class="sd">    :return: None if the list is empty or None, True if True is found in the</span>
+<span class="sd">        list, or False</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">return</span> <span class="kc">None</span> <span class="k">if</span> <span class="ow">not</span> <span class="n">lst</span> <span class="k">else</span> <span class="nb">bool</span><span class="p">(</span><span class="kc">True</span> <span class="ow">in</span> <span class="n">lst</span><span class="p">)</span></div>
 
