--- a/python/katas/_modules/codewars/alternate_square_sum.html
+++ b/python/katas/_modules/codewars/alternate_square_sum.html
@@ -257,17 +257,17 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.alternate_square_sum.alternate_sq_sum">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">alternate_sq_sum</span><span class="p">(</span><span class="n">arr</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">int</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="nb">int</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function squares each integer that is at an odd index in :attr:`arr` before summing</span>
-<span class="sd">    together each result with the rest of the integers, i.e. the integers at even indexes, in the</span>
-<span class="sd">    list.</span>
+<span class="sd">    This function squares each integer that is at an odd index in :attr:`arr`</span>
+<span class="sd">    before summing together each result with the rest of the integers, i.e. the</span>
+<span class="sd">    integers at even indexes, in the list.</span>
 
 <span class="sd">    :param arr: The input list of integers</span>
-<span class="sd">    :return: The sum of the square of each integer at an odd index in :attr:`arr` with the integers</span>
-<span class="sd">        at even indexes</span>
+<span class="sd">    :return: The sum of the square of each integer at an odd index in</span>
+<span class="sd">        :attr:`arr` with the integers at even indexes</span>
 <span class="sd">    &quot;&quot;&quot;</span>
-    <span class="k">return</span> <span class="nb">sum</span><span class="p">(</span>
-        <span class="n">element</span><span class="o">**</span><span class="mi">2</span> <span class="k">if</span> <span class="n">idx</span> <span class="o">%</span> <span class="mi">2</span> <span class="o">==</span> <span class="mi">1</span> <span class="k">else</span> <span class="n">element</span> <span class="k">for</span> <span class="n">idx</span><span class="p">,</span> <span class="n">element</span> <span class="ow">in</span> <span class="nb">enumerate</span><span class="p">(</span><span class="n">arr</span><span class="p">)</span>
-    <span class="p">)</span></div>
+    <span class="c1"># fmt: off</span>
+    <span class="k">return</span> <span class="nb">sum</span><span class="p">(</span><span class="n">element</span><span class="o">**</span><span class="mi">2</span> <span class="k">if</span> <span class="n">idx</span> <span class="o">%</span> <span class="mi">2</span> <span class="o">==</span> <span class="mi">1</span> <span class="k">else</span> <span class="n">element</span>
+               <span class="k">for</span> <span class="n">idx</span><span class="p">,</span> <span class="n">element</span> <span class="ow">in</span> <span class="nb">enumerate</span><span class="p">(</span><span class="n">arr</span><span class="p">))</span>  <span class="c1"># fmt: on</span></div>
 
 </pre></div>
         </article>
