--- a/python/katas/_modules/codewars/alternating_case_equals_alternating_case.html
+++ b/python/katas/_modules/codewars/alternating_case_equals_alternating_case.html
@@ -259,14 +259,16 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.alternating_case_equals_alternating_case.to_alternating_case">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">to_alternating_case</span><span class="p">(</span><span class="n">string</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function converts each lowercase character in the given string to an uppercase character,</span>
-<span class="sd">    and vice versa. Non-alphabetic characters (i.e. numbers, symbols) are left in the string.</span>
+<span class="sd">    This function converts each lowercase character in the given string to an</span>
+<span class="sd">    uppercase character, and vice versa. Non-alphabetic characters (i.e.,</span>
+<span class="sd">    numbers, symbols) are left in the string.</span>
 
 <span class="sd">    :param string: The input string</span>
-<span class="sd">    :return: A string that contains the same characters as the input string but the cases of the</span>
-<span class="sd">        alphabetic characters are swapped (lowercase to uppercase, and vice versa)</span>
+<span class="sd">    :return: A string that contains the same characters as the input string but</span>
+<span class="sd">        the cases of the alphabetic characters are swapped (lowercase to</span>
+<span class="sd">        uppercase, and vice versa)</span>
 <span class="sd">    &quot;&quot;&quot;</span>
-    <span class="k">return</span> <span class="s2">&quot;&quot;</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">char</span><span class="o">.</span><span class="n">lower</span><span class="p">()</span> <span class="k">if</span> <span class="n">char</span> <span class="ow">in</span> <span class="n">upper</span> <span class="k">else</span> <span class="n">char</span><span class="o">.</span><span class="n">upper</span><span class="p">()</span> <span class="k">for</span> <span class="n">char</span> <span class="ow">in</span> <span class="n">string</span><span class="p">)</span></div>
+    <span class="k">return</span> <span class="s2">&quot;&quot;</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">c</span><span class="o">.</span><span class="n">lower</span><span class="p">()</span> <span class="k">if</span> <span class="n">c</span> <span class="ow">in</span> <span class="n">upper</span> <span class="k">else</span> <span class="n">c</span><span class="o">.</span><span class="n">upper</span><span class="p">()</span> <span class="k">for</span> <span class="n">c</span> <span class="ow">in</span> <span class="n">string</span><span class="p">)</span></div>
 
 </pre></div>
         </article>
