--- a/python/katas/_modules/codewars/are_there_doubles.html
+++ b/python/katas/_modules/codewars/are_there_doubles.html
@@ -259,13 +259,13 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.are_there_doubles.double_check">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">double_check</span><span class="p">(</span><span class="n">string</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">bool</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function checks whether there are characters in :attr:`string` that appear two or more</span>
-<span class="sd">    times side by side. For example, given &quot;aabc&quot;, True is returned, and given &quot;abca&quot;, False is</span>
-<span class="sd">    returned.</span>
+<span class="sd">    This function checks whether there are characters in :attr:`string` that</span>
+<span class="sd">    appear two or more times side by side. For example, given &quot;aabc&quot;, True is</span>
+<span class="sd">    returned, and given &quot;abca&quot;, False is returned.</span>
 
 <span class="sd">    :param string: The input string</span>
-<span class="sd">    :return: True if there are characters in the string that appear two or more times side by side,</span>
-<span class="sd">        False otherwise</span>
+<span class="sd">    :return: True if there are characters in the string that appear two or more</span>
+<span class="sd">        times side by side, False otherwise</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">for</span> <span class="n">_</span><span class="p">,</span> <span class="n">value</span> <span class="ow">in</span> <span class="n">groupby</span><span class="p">(</span><span class="n">string</span><span class="o">.</span><span class="n">lower</span><span class="p">(),</span> <span class="k">lambda</span> <span class="n">x</span><span class="p">:</span> <span class="n">x</span><span class="p">):</span>
         <span class="k">if</span> <span class="nb">len</span><span class="p">(</span><span class="nb">list</span><span class="p">(</span><span class="n">value</span><span class="p">))</span> <span class="o">&gt;=</span> <span class="mi">2</span><span class="p">:</span>
