--- a/python/katas/_modules/codewars/are_they_the_same.html
+++ b/python/katas/_modules/codewars/are_they_the_same.html
@@ -257,13 +257,14 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.are_they_the_same.comp">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">comp</span><span class="p">(</span><span class="n">array1</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">int</span><span class="p">],</span> <span class="n">array2</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">int</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="nb">bool</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function takes two lists, both of the same size, and returns True if the square of each</span>
-<span class="sd">    number in :attr:`array1` is present in :attr:`array2`.</span>
+<span class="sd">    This function takes two lists, both of the same size, and returns True if</span>
+<span class="sd">    the square of each number in :attr:`array1` is present in :attr:`array2`.</span>
 
 <span class="sd">    :param array1: The input list of integers</span>
-<span class="sd">    :param array2: The input list of integers, contains the square of each number of :attr:`array1`</span>
-<span class="sd">    :return: True if :attr:`array2` contains the square of each number in :attr:`array1`, False</span>
-<span class="sd">        otherwise</span>
+<span class="sd">    :param array2: The input list of integers, contains the square of each</span>
+<span class="sd">        number of :attr:`array1`</span>
+<span class="sd">    :return: True if :attr:`array2` contains the square of each number in</span>
+<span class="sd">        :attr:`array1`, False otherwise</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">if</span> <span class="n">array1</span> <span class="ow">is</span> <span class="kc">None</span> <span class="ow">or</span> <span class="n">array2</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">:</span>
         <span class="k">return</span> <span class="kc">False</span>
