--- a/python/katas/_modules/codewars/array_manipulation.html
+++ b/python/katas/_modules/codewars/array_manipulation.html
@@ -259,13 +259,15 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.array_manipulation.array_manip">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">array_manip</span><span class="p">(</span><span class="n">array</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">int</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="nb">list</span><span class="p">[</span><span class="nb">int</span><span class="p">]:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function replaces every element in the given list of integers with one that is to its right</span>
-<span class="sd">    and is the least element out of all the elements that are greater than it. If there are no</span>
-<span class="sd">    elements to its right that are greater than it, the element is replaced with -1. For example,</span>
-<span class="sd">    given [1, 3, 2, 4, 5], [2, 4, -1, 5, -1] is returned.</span>
+<span class="sd">    This function replaces every element in the given list of integers with one</span>
+<span class="sd">    that is to its right and is the least element out of all the elements that</span>
+<span class="sd">    are greater than it. If there are no elements to its right that are greater</span>
+<span class="sd">    than it, the element is replaced with -1. For example,</span>
+<span class="sd">    array_manip([1, 3, 2, 4, 5]) will return [2, 4, -1, 5, -1].</span>
 
 <span class="sd">    :param array: The input list of integers</span>
-<span class="sd">    :return: A list of integers that are greater than the ones that they replaced</span>
+<span class="sd">    :return: A list of integers that are greater than the ones that they</span>
+<span class="sd">        replaced</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">result</span> <span class="o">=</span> <span class="n">array</span><span class="o">.</span><span class="n">copy</span><span class="p">()</span>
     <span class="k">for</span> <span class="n">idx</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="mi">0</span><span class="p">,</span> <span class="nb">len</span><span class="p">(</span><span class="n">array</span><span class="p">)</span> <span class="o">-</span> <span class="mi">1</span><span class="p">):</span>
