--- a/python/katas/_modules/codewars/array_mash.html
+++ b/python/katas/_modules/codewars/array_mash.html
@@ -257,9 +257,10 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.array_mash.array_mash">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">array_mash</span><span class="p">(</span><span class="n">arr1</span><span class="p">:</span> <span class="nb">list</span><span class="p">,</span> <span class="n">arr2</span><span class="p">:</span> <span class="nb">list</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">list</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function interleaves the elements in :attr:`arr1` with the elements in :attr:`arr2`. For</span>
-<span class="sd">    example, given [1, 3, 5] and [2, 4, 6], [1, 2, 3, 4, 5, 6] is returned. It is assumed that both</span>
-<span class="sd">    lists contain the same number of elements.</span>
+<span class="sd">    This function interleaves the elements in :attr:`arr1` with the elements in</span>
+<span class="sd">    :attr:`arr2`. For example, given [1, 3, 5] and [2, 4, 6],</span>
+<span class="sd">    [1, 2, 3, 4, 5, 6] is returned. It is assumed that both lists contain the</span>
+<span class="sd">    same number of elements.</span>
 
 <span class="sd">    :param arr1: The first input list</span>
 <span class="sd">    :param arr2: The second input list</span>
