--- a/python/katas/_modules/codewars/average_array.html
+++ b/python/katas/_modules/codewars/average_array.html
@@ -257,9 +257,10 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.average_array.avg_array">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">avg_array</span><span class="p">(</span><span class="n">lists</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">list</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="nb">list</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function calculates the average of all the elements in each list that are at the same</span>
-<span class="sd">    index. For example, given [[1, 2, 3], [4, 2], [1]], the function will return [2.0, 2.0, 3.0]</span>
-<span class="sd">    because 1 + 4 + 1 = 6 / 3 = 2.0, 2 + 2 = 4 / 2 = 2.0, and 3 / 1 = 3.0.</span>
+<span class="sd">    This function calculates the average of all the elements in each list that</span>
+<span class="sd">    are at the same index. For example, given [[1, 2, 3], [4, 2], [1]], the</span>
+<span class="sd">    function will return [2.0, 2.0, 3.0] because 1 + 4 + 1 = 6 / 3 = 2.0,</span>
+<span class="sd">    2 + 2 = 4 / 2 = 2.0, and 3 / 1 = 3.0.</span>
 
 <span class="sd">    :param lists: The input list that contains lists of numbers</span>
 <span class="sd">    :return: A list containing averages</span>
