--- a/python/katas/_modules/codewars/bases_everywhere.html
+++ b/python/katas/_modules/codewars/bases_everywhere.html
@@ -257,8 +257,8 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.bases_everywhere.base_finder">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">base_finder</span><span class="p">(</span><span class="n">seq</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">str</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="nb">int</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns the radix or base (between 2 and 10, inclusive) based on the numbers in</span>
-<span class="sd">    the given unsorted list.</span>
+<span class="sd">    This function returns the radix or base (between 2 and 10, inclusive) based</span>
+<span class="sd">    on the numbers in the given unsorted list.</span>
 
 <span class="sd">    :param seq: The input list of integers</span>
 <span class="sd">    :return: The base (radix) between 2 and 10, inclusive</span>
