--- a/python/katas/_modules/codewars/between_extremes.html
+++ b/python/katas/_modules/codewars/between_extremes.html
@@ -257,11 +257,12 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.between_extremes.between_extremes">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">between_extremes</span><span class="p">(</span><span class="n">numbers</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">int</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="nb">int</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns the difference between the maximum element in the list of integers and the</span>
-<span class="sd">    minimum element.</span>
+<span class="sd">    This function returns the difference between the maximum element in the</span>
+<span class="sd">    list of integers and the minimum element.</span>
 
 <span class="sd">    :param numbers: The input list of integers</span>
-<span class="sd">    :return: The difference between the maximum and minimum elements in the list</span>
+<span class="sd">    :return: The difference between the maximum and minimum elements in the</span>
+<span class="sd">        list</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">return</span> <span class="nb">max</span><span class="p">(</span><span class="n">numbers</span><span class="p">)</span> <span class="o">-</span> <span class="nb">min</span><span class="p">(</span><span class="n">numbers</span><span class="p">)</span></div>
 
