--- a/python/katas/_modules/codewars/binary_pyramid_101.html
+++ b/python/katas/_modules/codewars/binary_pyramid_101.html
@@ -257,13 +257,15 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.binary_pyramid_101.binary_pyramid">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">binary_pyramid</span><span class="p">(</span><span class="n">start</span><span class="p">:</span> <span class="nb">int</span><span class="p">,</span> <span class="n">end</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function converts all the integers from :attr:`start` to :attr:`end`, inclusive, to binary</span>
-<span class="sd">    strings, sums together all the binary strings as if they were in base 10, and then converts the</span>
-<span class="sd">    result to a binary string, which is returned.</span>
+<span class="sd">    This function converts all the integers from :attr:`start` to :attr:`end`,</span>
+<span class="sd">    inclusive, to binary strings, sums together all the binary strings as if</span>
+<span class="sd">    they were in base 10, and then converts the result to a binary string,</span>
+<span class="sd">    which is returned.</span>
 
 <span class="sd">    :param start: The input integer, the starting value</span>
 <span class="sd">    :param end: The input integer, the ending value</span>
-<span class="sd">    :return: The sum of all the numbers from :attr:`start` to :attr:`end`, inclusive</span>
+<span class="sd">    :return: The sum of all the numbers from :attr:`start` to :attr:`end`,</span>
+<span class="sd">        inclusive</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">if</span> <span class="n">start</span> <span class="o">&gt;</span> <span class="n">end</span><span class="p">:</span>
         <span class="n">start</span><span class="p">,</span> <span class="n">end</span> <span class="o">=</span> <span class="n">end</span><span class="p">,</span> <span class="n">start</span>
