--- a/python/katas/_modules/codewars/binary_representation_of_an_integer.html
+++ b/python/katas/_modules/codewars/binary_representation_of_an_integer.html
@@ -259,11 +259,12 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.binary_representation_of_an_integer.show_bits">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">show_bits</span><span class="p">(</span><span class="n">number</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">list</span><span class="p">[</span><span class="nb">int</span><span class="p">]:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function converts a 32-bit number into a list of ones and zeros, each representing a bit in</span>
-<span class="sd">    the number.</span>
+<span class="sd">    This function converts a 32-bit number into a list of ones and zeros, each</span>
+<span class="sd">    representing a bit in the number.</span>
 
 <span class="sd">    :param number: The input number, a 32-bit signed or unsigned integer</span>
-<span class="sd">    :return: A binary representation of :attr:`number` as a list of ones and zeros</span>
+<span class="sd">    :return: A binary representation of :attr:`number` as a list of ones and</span>
+<span class="sd">        zeros</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">return</span> <span class="nb">list</span><span class="p">(</span><span class="nb">map</span><span class="p">(</span><span class="nb">int</span><span class="p">,</span> <span class="nb">list</span><span class="p">(</span><span class="nb">bin</span><span class="p">(</span><span class="n">number</span> <span class="o">&amp;</span> <span class="n">MAX_32_BIT</span><span class="p">)[</span><span class="mi">2</span><span class="p">:]</span><span class="o">.</span><span class="n">rjust</span><span class="p">(</span><span class="mi">32</span><span class="p">,</span> <span class="s2">&quot;0&quot;</span><span class="p">))))</span></div>
 
