--- a/python/katas/_modules/codewars/binary_to_string.html
+++ b/python/katas/_modules/codewars/binary_to_string.html
@@ -257,7 +257,8 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.binary_to_string.binary_to_string">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">binary_to_string</span><span class="p">(</span><span class="n">binary</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function converts the given binary string to a string containing ASCII/Unicode characters.</span>
+<span class="sd">    This function converts the given binary string to a string containing</span>
+<span class="sd">    ASCII/Unicode characters.</span>
 
 <span class="sd">    :param binary: The input string, a binary string containing zeros and ones</span>
 <span class="sd">    :return: A string containing ASCII/Unicode characters</span>
