--- a/python/katas/_modules/codewars/bit_counting.html
+++ b/python/katas/_modules/codewars/bit_counting.html
@@ -257,11 +257,11 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.bit_counting.count_bits">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">count_bits</span><span class="p">(</span><span class="n">integer</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">int</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns the number of 1&#39;s in the binary string representation for the given</span>
-<span class="sd">    :attr:`integer`.</span>
+<span class="sd">    This function returns the number of 1&#39;s in the binary string representation</span>
+<span class="sd">    for the given :attr:`integer`.</span>
 
 <span class="sd">    :param integer: The input integer</span>
-<span class="sd">    :return: The number of 1&#39;s in the binary represetnation of :attr:`integer`</span>
+<span class="sd">    :return: The number of 1&#39;s in the binary representation of :attr:`integer`</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">return</span> <span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="n">integer</span><span class="si">:</span><span class="s2">0b</span><span class="si">}</span><span class="s2">&quot;</span><span class="o">.</span><span class="n">count</span><span class="p">(</span><span class="s2">&quot;1&quot;</span><span class="p">)</span></div>
 
