--- a/python/katas/_modules/codewars/twisted_sum.html
+++ b/python/katas/_modules/codewars/twisted_sum.html
@@ -257,11 +257,13 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.twisted_sum.compute_sum">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">compute_sum</span><span class="p">(</span><span class="n">limit</span><span class="p">:</span> <span class="nb">int</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function sums all the digits in each number from 1 to :attr:`limit`, inclusive. For</span>
-<span class="sd">    example, given 10, the result will be 1 + 2 + 3 + 4 + 5 + 6 + 7 + 8 + 9 + (1 + 0) = 46.</span>
+<span class="sd">    This function sums all the digits in each number from 1 to :attr:`limit`,</span>
+<span class="sd">    inclusive. For example, given 10, the result will be 1 + 2 + 3 + 4 + 5 + 6</span>
+<span class="sd">    + 7 + 8 + 9 + (1 + 0) = 46.</span>
 
 <span class="sd">    :param limit: The input integer</span>
-<span class="sd">    :return: The sum of all the digits in each number from 1 to :attr:`limit`, inclusive</span>
+<span class="sd">    :return: The sum of all the digits in each number from 1 to :attr:`limit`,</span>
+<span class="sd">        inclusive</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">return</span> <span class="nb">sum</span><span class="p">(</span>
         <span class="nb">int</span><span class="p">(</span><span class="n">character</span><span class="p">)</span>
