--- a/python/katas/_modules/codewars/vowels_back.html
+++ b/python/katas/_modules/codewars/vowels_back.html
@@ -259,13 +259,15 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.vowels_back.move_letter">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">move_letter</span><span class="p">(</span><span class="n">letter</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span> <span class="n">shift</span><span class="p">:</span> <span class="nb">int</span><span class="p">,</span> <span class="n">backward</span><span class="p">:</span> <span class="nb">bool</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This helper function shifts the given letter either left (:attr:`backward` is True) or right</span>
-<span class="sd">    :attr:`shift` places.</span>
+<span class="sd">    This helper function shifts the given letter either left (:attr:`backward`</span>
+<span class="sd">    is True) or right :attr:`shift` places.</span>
 
 <span class="sd">    :param letter: The letter to shift</span>
-<span class="sd">    :param shift: The number of places to shift left (backward) or right (forward)</span>
+<span class="sd">    :param shift: The number of places to shift left (backward) or right</span>
+<span class="sd">        (forward)</span>
 <span class="sd">    :param backward: True to shift left, False to shift right</span>
-<span class="sd">    :return: The result of the shift, or the original letter if the result is &#39;c&#39;, &#39;o&#39;, &#39;d&#39;, or &#39;e&#39;</span>
+<span class="sd">    :return: The result of the shift, or the original letter if the result is</span>
+<span class="sd">        &#39;c&#39;, &#39;o&#39;, &#39;d&#39;, or &#39;e&#39;</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">if</span> <span class="n">backward</span><span class="p">:</span>
         <span class="n">shift</span> <span class="o">*=</span> <span class="o">-</span><span class="mi">1</span>
@@ -280,15 +282,19 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.vowels_back.vowel_back">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">vowel_back</span><span class="p">(</span><span class="n">string</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function shifts all the letters in the given string forward or backward based on the</span>
-<span class="sd">    following rules: move consonants nine places forward, move vowels five places backward. Wrap</span>
-<span class="sd">    around to the beginning or end of the alphabet if the shift goes past &#39;z&#39; or &#39;a&#39;, respectively.</span>
-<span class="sd">    Exceptions: if the character to shift is &#39;c&#39; or &#39;o&#39;, move backward one place; if the character</span>
-<span class="sd">    is &#39;d&#39;, move backward three places, and if the character is &#39;e&#39;, move backward four places. If</span>
-<span class="sd">    the result of the shift results in &#39;c&#39;, &#39;o&#39;, &#39;d&#39;, or &#39;e&#39;, revert back to the original letter.</span>
+<span class="sd">    This function shifts all the letters in the given string forward or</span>
+<span class="sd">    backward based on the following rules: move consonants nine places forward,</span>
+<span class="sd">    move vowels five places backward. Wrap around to the beginning or end of</span>
+<span class="sd">    the alphabet if the shift goes past &#39;z&#39; or &#39;a&#39;, respectively. Exceptions:</span>
+<span class="sd">    if the character to shift is &#39;c&#39; or &#39;o&#39;, move backward one place; if the</span>
+<span class="sd">    character is &#39;d&#39;, move backward three places, and if the character is &#39;e&#39;,</span>
+<span class="sd">    move backward four places. If the result of the shift results in &#39;c&#39;, &#39;o&#39;,</span>
+<span class="sd">    &#39;d&#39;, or &#39;e&#39;, revert back to the original letter.</span>
 
-<span class="sd">    :param string: The input string that contains characters to shift forward or backward</span>
-<span class="sd">    :return: A new string that contains characters that were the result of a shift</span>
+<span class="sd">    :param string: The input string that contains characters to shift forward</span>
+<span class="sd">        or backward</span>
+<span class="sd">    :return: A new string that contains characters that were the result of a</span>
+<span class="sd">        shift</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">arr</span> <span class="o">=</span> <span class="p">[]</span>
     <span class="k">for</span> <span class="n">char</span> <span class="ow">in</span> <span class="n">string</span><span class="o">.</span><span class="n">lower</span><span class="p">():</span>
