--- a/python/katas/_modules/codewars/weird_ipv6_hex_string_parsing.html
+++ b/python/katas/_modules/codewars/weird_ipv6_hex_string_parsing.html
@@ -257,23 +257,23 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.weird_ipv6_hex_string_parsing.parse_ipv6">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">parse_ipv6</span><span class="p">(</span><span class="n">ipv6</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function separates each octet in the given IPv6 string, sums all the digits in each octet,</span>
-<span class="sd">    and concatenates all the sums together.</span>
+<span class="sd">    This function separates each octet in the given IPv6 string, sums all the</span>
+<span class="sd">    digits in each octet, and concatenates all the sums together.</span>
 
 <span class="sd">    :param ipv6: The input string, a valid IPv6 address</span>
 <span class="sd">    :return: The sum of each octet concatenated together into a single string</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">hex_chars</span> <span class="o">=</span> <span class="s2">&quot;0123456789abcdefABCDEF&quot;</span>
-    <span class="n">characters</span> <span class="o">=</span> <span class="p">[]</span>
+    <span class="n">chars</span> <span class="o">=</span> <span class="p">[]</span>
     <span class="n">results</span> <span class="o">=</span> <span class="p">[]</span>
     <span class="k">for</span> <span class="n">letter</span> <span class="ow">in</span> <span class="n">ipv6</span><span class="p">:</span>
         <span class="k">if</span> <span class="n">letter</span> <span class="ow">in</span> <span class="n">hex_chars</span><span class="p">:</span>
-            <span class="n">characters</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">letter</span><span class="p">)</span>
+            <span class="n">chars</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">letter</span><span class="p">)</span>
         <span class="k">else</span><span class="p">:</span>
-            <span class="n">results</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="nb">str</span><span class="p">(</span><span class="nb">sum</span><span class="p">(</span><span class="nb">int</span><span class="p">(</span><span class="n">character</span><span class="p">,</span> <span class="mi">16</span><span class="p">)</span> <span class="k">for</span> <span class="n">character</span> <span class="ow">in</span> <span class="n">characters</span><span class="p">)))</span>
-            <span class="n">characters</span> <span class="o">=</span> <span class="p">[]</span>
-    <span class="k">if</span> <span class="n">characters</span><span class="p">:</span>
-        <span class="n">results</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="nb">str</span><span class="p">(</span><span class="nb">sum</span><span class="p">(</span><span class="nb">int</span><span class="p">(</span><span class="n">character</span><span class="p">,</span> <span class="mi">16</span><span class="p">)</span> <span class="k">for</span> <span class="n">character</span> <span class="ow">in</span> <span class="n">characters</span><span class="p">)))</span>
+            <span class="n">results</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="nb">str</span><span class="p">(</span><span class="nb">sum</span><span class="p">(</span><span class="nb">int</span><span class="p">(</span><span class="n">character</span><span class="p">,</span> <span class="mi">16</span><span class="p">)</span> <span class="k">for</span> <span class="n">character</span> <span class="ow">in</span> <span class="n">chars</span><span class="p">)))</span>
+            <span class="n">chars</span> <span class="o">=</span> <span class="p">[]</span>
+    <span class="k">if</span> <span class="n">chars</span><span class="p">:</span>
+        <span class="n">results</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="nb">str</span><span class="p">(</span><span class="nb">sum</span><span class="p">(</span><span class="nb">int</span><span class="p">(</span><span class="n">character</span><span class="p">,</span> <span class="mi">16</span><span class="p">)</span> <span class="k">for</span> <span class="n">character</span> <span class="ow">in</span> <span class="n">chars</span><span class="p">)))</span>
     <span class="k">return</span> <span class="s2">&quot;&quot;</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">results</span><span class="p">)</span></div>
 
 </pre></div>
