--- a/python/katas/_modules/codewars/well_of_ideas_easy_version.html
+++ b/python/katas/_modules/codewars/well_of_ideas_easy_version.html
@@ -257,16 +257,18 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.well_of_ideas_easy_version.well">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">well</span><span class="p">(</span><span class="n">arr</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">str</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function counts the number of times the word &quot;good&quot; appears in the given list of strings.</span>
-<span class="sd">    If it appears once or twice, &quot;Publish!&quot; is returned. If it appears more than two times, the</span>
-<span class="sd">    string &quot;I smell a series!&quot; is returned. But if it does not appear in the list at all, &quot;Fail!&quot; is</span>
+<span class="sd">    This function counts the number of times the word &quot;good&quot; appears in the</span>
+<span class="sd">    given list of strings. If it appears once or twice, &quot;Publish!&quot; is returned.</span>
+<span class="sd">    If it appears more than two times, the string &quot;I smell a series!&quot; is</span>
+<span class="sd">    returned. But if it does not appear in the list at all, &quot;Fail!&quot; is</span>
 <span class="sd">    returned.</span>
 
 <span class="sd">    :param arr: The input list of strings</span>
 <span class="sd">    :return: &quot;I smell a series!&quot;, &quot;Publish!&quot; or &quot;Fail!&quot;</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">count</span> <span class="o">=</span> <span class="nb">sum</span><span class="p">(</span><span class="mi">1</span> <span class="k">for</span> <span class="n">idea</span> <span class="ow">in</span> <span class="n">arr</span> <span class="k">if</span> <span class="n">idea</span> <span class="o">==</span> <span class="s2">&quot;good&quot;</span><span class="p">)</span>
-    <span class="k">return</span> <span class="s2">&quot;I smell a series!&quot;</span> <span class="k">if</span> <span class="n">count</span> <span class="o">&gt;</span> <span class="mi">2</span> <span class="k">else</span> <span class="s2">&quot;Publish!&quot;</span> <span class="k">if</span> <span class="n">count</span> <span class="o">&gt;</span> <span class="mi">0</span> <span class="k">else</span> <span class="s2">&quot;Fail!&quot;</span></div>
+    <span class="n">message</span> <span class="o">=</span> <span class="s2">&quot;I smell a series!&quot;</span>
+    <span class="k">return</span> <span class="n">message</span> <span class="k">if</span> <span class="n">count</span> <span class="o">&gt;</span> <span class="mi">2</span> <span class="k">else</span> <span class="s2">&quot;Publish!&quot;</span> <span class="k">if</span> <span class="n">count</span> <span class="o">&gt;</span> <span class="mi">0</span> <span class="k">else</span> <span class="s2">&quot;Fail!&quot;</span></div>
 
 </pre></div>
         </article>
