--- a/python/katas/_modules/codewars/well_of_ideas_harder_version.html
+++ b/python/katas/_modules/codewars/well_of_ideas_harder_version.html
@@ -257,10 +257,11 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.well_of_ideas_harder_version.well">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">well</span><span class="p">(</span><span class="n">ideas</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">list</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function counts the number of times the word &quot;good&quot; (regardless of case) appears in the</span>
-<span class="sd">    given two-dimensional list. Each list may contain not just strings but also other types of</span>
-<span class="sd">    values such as integers and floats. If the word appears once or twice, &quot;Publish!&quot; is returned.</span>
-<span class="sd">    If it appears more than two times, the string &quot;I smell a series!&quot; is returned. But if it does</span>
+<span class="sd">    This function counts the number of times the word &quot;good&quot; (regardless of</span>
+<span class="sd">    case) appears in the given two-dimensional list. Each list may contain not</span>
+<span class="sd">    just strings but also other types of values such as integers and floats. If</span>
+<span class="sd">    the word appears once or twice, &quot;Publish!&quot; is returned. If it appears more</span>
+<span class="sd">    than two times, the string &quot;I smell a series!&quot; is returned. But if it does</span>
 <span class="sd">    not appear at all, &quot;Fail!&quot; is returned.</span>
 
 <span class="sd">    :param ideas: The input list of strings</span>
@@ -269,7 +270,8 @@
     <span class="n">count</span> <span class="o">=</span> <span class="p">[</span>
         <span class="n">idea</span><span class="o">.</span><span class="n">lower</span><span class="p">()</span> <span class="k">for</span> <span class="n">arr</span> <span class="ow">in</span> <span class="n">ideas</span> <span class="k">for</span> <span class="n">idea</span> <span class="ow">in</span> <span class="n">arr</span> <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">idea</span><span class="p">,</span> <span class="nb">str</span><span class="p">)</span>
     <span class="p">]</span><span class="o">.</span><span class="n">count</span><span class="p">(</span><span class="s2">&quot;good&quot;</span><span class="p">)</span>
-    <span class="k">return</span> <span class="s2">&quot;I smell a series!&quot;</span> <span class="k">if</span> <span class="n">count</span> <span class="o">&gt;</span> <span class="mi">2</span> <span class="k">else</span> <span class="s2">&quot;Publish!&quot;</span> <span class="k">if</span> <span class="n">count</span> <span class="o">&gt;</span> <span class="mi">0</span> <span class="k">else</span> <span class="s2">&quot;Fail!&quot;</span></div>
+    <span class="n">message</span> <span class="o">=</span> <span class="s2">&quot;I smell a series!&quot;</span>
+    <span class="k">return</span> <span class="n">message</span> <span class="k">if</span> <span class="n">count</span> <span class="o">&gt;</span> <span class="mi">2</span> <span class="k">else</span> <span class="s2">&quot;Publish!&quot;</span> <span class="k">if</span> <span class="n">count</span> <span class="o">&gt;</span> <span class="mi">0</span> <span class="k">else</span> <span class="s2">&quot;Fail!&quot;</span></div>
 
 </pre></div>
         </article>
