--- a/python/katas/_modules/codewars/wilson_primes.html
+++ b/python/katas/_modules/codewars/wilson_primes.html
@@ -259,9 +259,10 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.wilson_primes.am_i_wilson">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">am_i_wilson</span><span class="p">(</span><span class="n">number</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">bool</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function returns True if :attr:`number` is prime and also a Wilson prime. Note that the</span>
-<span class="sd">    only Wilson primes that exist are 5, 13, and 563. If any other Wilson primes exist, they must be</span>
-<span class="sd">    larger than 2 * 10^13, or 20,000,000,000,000.</span>
+<span class="sd">    This function returns True if :attr:`number` is prime and also a Wilson</span>
+<span class="sd">    prime. Note that the only Wilson primes that exist are 5, 13, and 563. If</span>
+<span class="sd">    any other Wilson primes exist, they must be larger than 2 * 10^13, or</span>
+<span class="sd">    20,000,000,000,000.</span>
 
 <span class="sd">    :param number: The input integer</span>
 <span class="sd">    :return: True if :attr:`number` is a Wilson prime</span>
