--- a/python/katas/_modules/codewars/words_to_sentence.html
+++ b/python/katas/_modules/codewars/words_to_sentence.html
@@ -257,10 +257,12 @@
 <a class="viewcode-back" href="../../codewars.html#codewars.words_to_sentence.words_to_sentence">[docs]</a>
 <span class="k">def</span><span class="w"> </span><span class="nf">words_to_sentence</span><span class="p">(</span><span class="n">words</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="nb">str</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="nb">str</span><span class="p">:</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    This function creates a string from a list of strings, each of which is separated by a space.</span>
+<span class="sd">    This function creates a string from a list of strings, each of which is</span>
+<span class="sd">    separated by a space.</span>
 
 <span class="sd">    :param words: The input list of strings</span>
-<span class="sd">    :return: A string containing all the strings in :attr:`words`, separated by a space</span>
+<span class="sd">    :return: A string containing all the strings in :attr:`words`, separated by</span>
+<span class="sd">        a space</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="k">return</span> <span class="s2">&quot; &quot;</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">words</span><span class="p">)</span></div>
 
